maze.lessons.maze.island.IslandMaze.scala.error
Escaper:10: error: not found: value set
     		set etat = 1
                ^